--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                     <li><a href="foog.html">
                             <p style="font-size: 30px;">Питание</p>
                         </a></li>
-                    <li><a href="#">
+                    <li><a href="prochie.html">
                             <p style="font-size: 30px;">Школьная форма</p>
                         </a></li>
                     <li><a href="exams.html">
                             <p style="font-size: 30px;">Экзамены</p>
                         </a></li>
-                    <li><a href="#">
+                    <li><a href="prochie.html">
                             <p style="font-size: 30px;">Прием в школу</p>
                         </a></li>
                 </ul>
